--- a/index.html
+++ b/index.html
@@ -6,25 +6,28 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g==" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body class="page">
     <header>
-        <nav class="site-nav">
-            <a href="./index.html" class="logo"><span class="main-logo">Web</span>Studio</a>        
-             <ul>
-                <li><a href="./index.html" class="link current">Студия</a></li>
-                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
-             </ul>             
-        </nav>        
+        <div class="container">
+            <nav class="site-nav">
+                <a href="./index.html" class="logo"><span class="main-logo">Web</span>Studio</a>        
+                <ul>
+                    <li><a href="./index.html" class="link current">Студия</a></li>
+                    <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li><a href="" class="link">Контакты</a></li>
+                </ul>             
+            </nav>        
 
-        <div class="contacts">
-            <ul>
-                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-            </ul>
-        </div>       
+            <div class="contacts">
+                <ul>
+                    <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+                </ul>
+            </div>
+    </div>       
     </header>
     
     <main>
@@ -37,64 +40,70 @@
         </section>
 
 <!-- преимущества данной веб студии-->
-        <section class="section">
-            <!--h2 скроется в css-->
-            <h2> Наши преимущества</h2>
-            <ul>
-                <li>
-                    <h3 class="advantages-title">Внимание к деталям</h3>
-                    <p class="advantages-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li>
-                    <h3 class="advantages-title">Пунктуальность</h3>
-                    <p class="advantages-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li>
-                    <h3 class="advantages-title">Планирование</h3>
-                    <p class="advantages-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li>
-                    <h3 class="advantages-title">Современные технологии</h3>
-                    <p class="advantages-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
+        <section class="advantages">
+            <div class="container">
+                <!--h2 скроется в css-->
+                <h2 class="advantages-hidden-title"> Наши преимущества</h2>
+                <ul>
+                    <li>
+                        <h3 class="advantages-title">Внимание к деталям</h3>
+                        <p class="advantages-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    </li>
+                    <li>
+                        <h3 class="advantages-title">Пунктуальность</h3>
+                        <p class="advantages-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    </li>
+                    <li>
+                        <h3 class="advantages-title">Планирование</h3>
+                        <p class="advantages-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    </li>
+                    <li>
+                        <h3 class="advantages-title">Современные технологии</h3>
+                        <p class="advantages-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
 <!-- чем занимается веб студия-->
         <section class="work">
-            <h2 class="work-title">Чем мы занимаемся</h2>
-            <ul>
-                <li><img src="./img/box1.jpg" alt="сайт" width="370"></li>
-                <li><img src="./img/box2.jpg" alt="приложения" width="370"></li>
-                <li><img src="./img/box3.jpg" alt="дизайн" width="370"></li>
-            </ul>            
+            <div class="container">
+                <h2 class="work-title">Чем мы занимаемся</h2>
+                <ul>
+                    <li><img src="./img/box1.jpg" alt="сайт" width="370"></li>
+                    <li><img src="./img/box2.jpg" alt="приложения" width="370"></li>
+                    <li><img src="./img/box3.jpg" alt="дизайн" width="370"></li>
+                </ul> 
+            </div>
         </section>
 
 <!-- члены комманды веб студии-->
         <section class="staff">
-            <h2 class="staff-title">Наша команда</h2>
-            <ul>
-                <li>
-                    <img src="./img/img.jpg" alt="фото сотрудника" width="270">
-                    <h3 class="name">Игорь Демьяненко</h3>
-                    <p class="profession">Product Designer</p>
-                </li>
-                <li>
-                    <img src="./img/img1.jpg" alt="фото сотрудника" width="270">
-                    <h3 class="name">Ольга Репина</h3>
-                    <p class="profession">Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./img/img2.jpg" alt="фото сотрудника" width="270">
-                    <h3 class="name">Николай Тарасов</h3>
-                    <p class="profession">Marketing</p>
-                </li>
-                <li>
-                    <img src="./img/img3.jpg" alt="фото сотрудника" width="270">
-                    <h3 class="name">Михаил Ермаков</h3>
-                    <p class="profession">UI Designer</p>
-                </li>
-            </ul>
+            <div class="container">
+                <h2 class="staff-title">Наша команда</h2>
+                <ul>
+                    <li>
+                        <img src="./img/img.jpg" alt="фото сотрудника" width="270">
+                        <h3 class="name">Игорь Демьяненко</h3>
+                        <p class="profession">Product Designer</p>
+                    </li>
+                    <li>
+                        <img src="./img/img1.jpg" alt="фото сотрудника" width="270">
+                        <h3 class="name">Ольга Репина</h3>
+                        <p class="profession">Frontend Developer</p>
+                    </li>
+                    <li>
+                        <img src="./img/img2.jpg" alt="фото сотрудника" width="270">
+                        <h3 class="name">Николай Тарасов</h3>
+                        <p class="profession">Marketing</p>
+                    </li>
+                    <li>
+                        <img src="./img/img3.jpg" alt="фото сотрудника" width="270">
+                        <h3 class="name">Михаил Ермаков</h3>
+                        <p class="profession">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
 
