--- a/index.html
+++ b/index.html
@@ -11,23 +11,21 @@
 </head>
 <body class="page">
     <header>
-        <div class="container">
-            <nav class="site-nav">
+        <div class="container main-nav">
+            <nav class="nav">
                 <a href="./index.html" class="logo"><span class="main-logo">Web</span>Studio</a>        
-                <ul>
-                    <li><a href="./index.html" class="link current">Студия</a></li>
-                    <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                    <li><a href="" class="link">Контакты</a></li>
+                <ul class="site-nav">
+                    <li class="item"><a href="./index.html" class="link current">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link">Портфолио</a></li>
+                    <li class="item"><a href="" class="link">Контакты</a></li>
                 </ul>             
             </nav>        
 
-            <div class="contacts">
-                <ul>
-                    <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-                </ul>
-            </div>
-    </div>       
+            <ul class="contacts">
+                <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+            </ul>
+        </div>       
     </header>
     
     <main>
