--- a/portfolio.html
+++ b/portfolio.html
@@ -11,104 +11,104 @@
 </head>
 <body class="page">
     <header>
-        <div class="container">
-            <nav class="site-nav">
+        <div class="container main-nav">
+            <nav class="nav">
                 <a href="./index.html" class="logo"><span class="main-logo">Web</span>Studio</a>        
-                <ul>
-                    <li><a href="./index.html" class="link current">Студия</a></li>
-                    <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                    <li><a href="" class="link">Контакты</a></li>
+                <ul class="site-nav">
+                    <li class="item"><a href="./index.html" class="link">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
+                    <li class="item"><a href="" class="link">Контакты</a></li>
                 </ul>             
             </nav>        
 
-            <div class="contacts">
-                <ul>
-                    <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-                </ul>
-            </div>
-    </div>       
+            <ul class="contacts">
+                <li class="item"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+            </ul>
+        </div>       
     </header>
     
     <main>
         <section class="galary">
-            <!-- заголовок скроем позже -->
-            <h1> галерея</h1>
-            <!-- фильтр -->
-            <ul>
-                <li><button type="button" class="button secondary">Все</button></li>
-                <li><button type="button" class="button secondary">Веб-сайты</button></li>
-                <li><button type="button" class="button secondary">Приложения</button></li>
-                <li><button type="button" class="button secondary">Дизайн</button></li>
-                <li><button type="button" class="button secondary">Маркетинг</button></li>
-            </ul>
+            <div class="container">
+                <!-- заголовок скроем позже -->    
+                <h1 class="galary"> галерея</h1>
+                <!-- фильтр -->
+                <ul>
+                    <li><button type="button" class="button secondary">Все</button></li>
+                    <li><button type="button" class="button secondary">Веб-сайты</button></li>
+                    <li><button type="button" class="button secondary">Приложения</button></li>
+                    <li><button type="button" class="button secondary">Дизайн</button></li>
+                    <li><button type="button" class="button secondary">Маркетинг</button></li>
+                </ul>
 
-            <!-- собственно примеры работ -->
-            <ul>
-                <li> 
-                    <a href="" class="galary-link">
-                        <img src="./img/img21.jpg" alt="фото веб-сайта" width="370">
-                        <h2 class="galary-title">Технокряк</h2>
-                        <p class="galary-text">Веб-сайт</p> 
-                    </a>
-                 </li>
-                <li>
-                    <a href="" class="galary-link">
-                        <img src="./img/img22.jpg" alt="фото дизайна" width="370">
-                        <h2 class="galary-title">Постер New Orlean vs Golden Star</h2>
-                        <p class="galary-text">Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="galary-link">
-                        <img src="./img/img23.jpg" alt="фото логотипа ресторана" width="370">
-                        <h2 class="galary-title">Ресторан Seafood</h2>
-                        <p class="galary-text">Приложение</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="galary-link">
-                        <img src="./img/img24.jpg" alt="фото наушники" width="370">
-                        <h2 class="galary-title">Проект Prime</h2>
-                        <p class="galary-text">Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="galary-link">
-                        <img src="./img/img25.jpg" alt="фото коробки" width="370">
-                        <h2 class="galary-title">Проект Boxes</h2>
-                        <p class="galary-text">Приложение</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="galary-link">
-                        <img src="./img/img26.jpg" alt="фото веб-сайта" width="370">
-                        <h2 class="galary-title">Inspiration has no Borders</h2>
-                        <p class="galary-text">Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="galary-link">
-                        <img src="./img/img27.jpg" alt="фото журнала" width="370">
-                        <h2 class="galary-title">Издание Limited Edition</h2>
-                        <p class="galary-text">Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="galary-link">
-                        <img src="./img/img28.jpg" alt="фото бирки" width="370">
-                        <h2 class="galary-title">Проект LAB</h2>
-                        <p class="galary-text">Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="galary-link">
-                        <img src="./img/img29.jpg" alt="фото ноутбука" width="370">
-                        <h2 class="galary-title">Growing Business</h2>
-                        <p class="galary-text">Приложение</p>
-                    </a>
-                </li>
-            </ul>
+                <!-- собственно примеры работ -->
+                <ul>
+                    <li> 
+                        <a href="" class="galary-link">
+                            <img src="./img/img21.jpg" alt="фото веб-сайта" width="370">
+                            <h2 class="galary-title">Технокряк</h2>
+                            <p class="galary-text">Веб-сайт</p> 
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="galary-link">
+                            <img src="./img/img22.jpg" alt="фото дизайна" width="370">
+                            <h2 class="galary-title">Постер New Orlean vs Golden Star</h2>
+                            <p class="galary-text">Дизайн</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="galary-link">
+                            <img src="./img/img23.jpg" alt="фото логотипа ресторана" width="370">
+                            <h2 class="galary-title">Ресторан Seafood</h2>
+                            <p class="galary-text">Приложение</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="galary-link">
+                            <img src="./img/img24.jpg" alt="фото наушники" width="370">
+                            <h2 class="galary-title">Проект Prime</h2>
+                            <p class="galary-text">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="galary-link">
+                            <img src="./img/img25.jpg" alt="фото коробки" width="370">
+                            <h2 class="galary-title">Проект Boxes</h2>
+                            <p class="galary-text">Приложение</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="galary-link">
+                            <img src="./img/img26.jpg" alt="фото веб-сайта" width="370">
+                            <h2 class="galary-title">Inspiration has no Borders</h2>
+                            <p class="galary-text">Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="galary-link">
+                            <img src="./img/img27.jpg" alt="фото журнала" width="370">
+                            <h2 class="galary-title">Издание Limited Edition</h2>
+                            <p class="galary-text">Дизайн</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="galary-link">
+                            <img src="./img/img28.jpg" alt="фото бирки" width="370">
+                            <h2 class="galary-title">Проект LAB</h2>
+                            <p class="galary-text">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="galary-link">
+                            <img src="./img/img29.jpg" alt="фото ноутбука" width="370">
+                            <h2 class="galary-title">Growing Business</h2>
+                            <p class="galary-text">Приложение</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
 
         </section>
     </main>
