--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
             <div class="container">
                 <!--h2 скроется в css-->
                 <h2 class="advantages-hidden-title"> Наши преимущества</h2>
-                <ul>
-                    <li>
+                <ul class="advantages-list">
+                    <li class="item">
                         <h3 class="advantages-title">Внимание к деталям</h3>
                         <p class="advantages-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3 class="advantages-title">Пунктуальность</h3>
                         <p class="advantages-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3 class="advantages-title">Планирование</h3>
                         <p class="advantages-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li>
+                    <li class="item">
                         <h3 class="advantages-title">Современные технологии</h3>
                         <p class="advantages-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -67,10 +67,10 @@
         <section class="work">
             <div class="container">
                 <h2 class="work-title">Чем мы занимаемся</h2>
-                <ul>
-                    <li><img src="./img/box1.jpg" alt="сайт" width="370"></li>
-                    <li><img src="./img/box2.jpg" alt="приложения" width="370"></li>
-                    <li><img src="./img/box3.jpg" alt="дизайн" width="370"></li>
+                <ul class="work-list">
+                    <li><img src="./img/box1.jpg" alt="сайт" width="370" class="work-photo"></li>
+                    <li><img src="./img/box2.jpg" alt="приложения" width="370" class="work-photo"></li>
+                    <li><img src="./img/box3.jpg" alt="дизайн" width="370" class="work-photo"></li>
                 </ul> 
             </div>
         </section>
@@ -79,19 +79,19 @@
         <section class="staff">
             <div class="container">
                 <h2 class="staff-title">Наша команда</h2>
-                <ul>
+                <ul class="staff-list">
                     <li>
-                        <img src="./img/img.jpg" alt="фото сотрудника" width="270">
+                        <img src="./img/img.jpg" alt="фото сотрудника" width="270" class="staff-photo">
                         <h3 class="name">Игорь Демьяненко</h3>
                         <p class="profession">Product Designer</p>
                     </li>
                     <li>
-                        <img src="./img/img1.jpg" alt="фото сотрудника" width="270">
+                        <img src="./img/img1.jpg" alt="фото сотрудника" width="270" class="staff-photo">
                         <h3 class="name">Ольга Репина</h3>
                         <p class="profession">Frontend Developer</p>
                     </li>
                     <li>
-                        <img src="./img/img2.jpg" alt="фото сотрудника" width="270">
+                        <img src="./img/img2.jpg" alt="фото сотрудника" width="270" class="staff-photo">
                         <h3 class="name">Николай Тарасов</h3>
                         <p class="profession">Marketing</p>
                     </li>
@@ -106,12 +106,14 @@
     </main>
 
     <footer class="footer">
-        <a href="./index.html" class="logo"><span class="main-logo">Web</span>Studio</a>
-        <address>
-            г. Киев, пр-т Леси Украинки, 26 
-            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>            
-        </address>
+        <div class="container">
+            <a href="./index.html" class="logo"><span class="main-logo">Web</span>Studio</a>
+            <address>
+                г. Киев, пр-т Леси Украинки, 26 
+                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>            
+            </address>
+        </div>
     </footer>
 
 </body>
