--- a/index.html
+++ b/index.html
@@ -80,22 +80,22 @@
             <div class="container">
                 <h2 class="staff-title">Наша команда</h2>
                 <ul class="staff-list">
-                    <li>
+                    <li class="staff-item"> 
                         <img src="./img/img.jpg" alt="фото сотрудника" width="270" class="staff-photo">
                         <h3 class="name">Игорь Демьяненко</h3>
                         <p class="profession">Product Designer</p>
                     </li>
-                    <li>
+                    <li class="staff-item">
                         <img src="./img/img1.jpg" alt="фото сотрудника" width="270" class="staff-photo">
                         <h3 class="name">Ольга Репина</h3>
                         <p class="profession">Frontend Developer</p>
                     </li>
-                    <li>
+                    <li class="staff-item">
                         <img src="./img/img2.jpg" alt="фото сотрудника" width="270" class="staff-photo">
                         <h3 class="name">Николай Тарасов</h3>
                         <p class="profession">Marketing</p>
                     </li>
-                    <li>
+                    <li class="staff-item">
                         <img src="./img/img3.jpg" alt="фото сотрудника" width="270">
                         <h3 class="name">Михаил Ермаков</h3>
                         <p class="profession">UI Designer</p>
@@ -109,9 +109,9 @@
         <div class="container">
             <a href="./index.html" class="logo"><span class="main-logo">Web</span>Studio</a>
             <address>
-                г. Киев, пр-т Леси Украинки, 26 
-                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>            
+                <p class="street">г. Киев, пр-т Леси Украинки, 26 </p> 
+                <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
+                <a href="tel:+380961111111" class="tel">+38 096 111 11 11</a>            
             </address>
         </div>
     </footer>
