--- a/portfolio.html
+++ b/portfolio.html
@@ -116,9 +116,9 @@
     <footer class="footer">
         <a href="./index.html" class="logo"><span class="main-logo">Web</span>Studio</a>
         <address>
-            г. Киев, пр-т Леси Украинки, 26 
-            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>            
+            <p class="street">г. Киев, пр-т Леси Украинки, 26 </p>
+            <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
+            <a href="tel:+380961111111" class="tel">+38 096 111 11 11</a>            
         </address>
     </footer>
 </body>
