--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section class="advantages">
             <div class="container">
                 <!--h2 скроется в css-->
-                <h2 class="advantages-hidden-title"> Наши преимущества</h2>
+                <h2 class="visually-hidden"> Наши преимущества</h2>
                 <ul class="advantages-list">
                     <li class="item">
                         <h3 class="advantages-title">Внимание к деталям</h3>
@@ -68,9 +68,9 @@
             <div class="container">
                 <h2 class="work-title">Чем мы занимаемся</h2>
                 <ul class="work-list">
-                    <li><img src="./img/box1.jpg" alt="сайт" width="370" class="work-photo"></li>
-                    <li><img src="./img/box2.jpg" alt="приложения" width="370" class="work-photo"></li>
-                    <li><img src="./img/box3.jpg" alt="дизайн" width="370" class="work-photo"></li>
+                    <li><img src="./img/box1.jpg" alt="сайт" width="370"></li>
+                    <li><img src="./img/box2.jpg" alt="приложения" width="370"></li>
+                    <li><img src="./img/box3.jpg" alt="дизайн" width="370"></li>
                 </ul> 
             </div>
         </section>
@@ -81,17 +81,17 @@
                 <h2 class="staff-title">Наша команда</h2>
                 <ul class="staff-list">
                     <li class="staff-item"> 
-                        <img src="./img/img.jpg" alt="фото сотрудника" width="270" class="staff-photo">
+                        <img src="./img/img.jpg" alt="фото сотрудника" width="270">
                         <h3 class="name">Игорь Демьяненко</h3>
                         <p class="profession">Product Designer</p>
                     </li>
                     <li class="staff-item">
-                        <img src="./img/img1.jpg" alt="фото сотрудника" width="270" class="staff-photo">
+                        <img src="./img/img1.jpg" alt="фото сотрудника" width="270">
                         <h3 class="name">Ольга Репина</h3>
                         <p class="profession">Frontend Developer</p>
                     </li>
                     <li class="staff-item">
-                        <img src="./img/img2.jpg" alt="фото сотрудника" width="270" class="staff-photo">
+                        <img src="./img/img2.jpg" alt="фото сотрудника" width="270">
                         <h3 class="name">Николай Тарасов</h3>
                         <p class="profession">Marketing</p>
                     </li>
