--- a/portfolio.html
+++ b/portfolio.html
@@ -32,79 +32,99 @@
         <section class="galary">
             <div class="container">
                 <!-- заголовок скроем позже -->    
-                <h1 class="galary"> галерея</h1>
+                <h1 class="visually-hidden"> галерея</h1>
                 <!-- фильтр -->
-                <ul>
-                    <li><button type="button" class="button secondary">Все</button></li>
-                    <li><button type="button" class="button secondary">Веб-сайты</button></li>
-                    <li><button type="button" class="button secondary">Приложения</button></li>
-                    <li><button type="button" class="button secondary">Дизайн</button></li>
-                    <li><button type="button" class="button secondary">Маркетинг</button></li>
+                <ul class="filter">
+                    <li class="filter-item"><button type="button" class="button secondary">Все</button></li>
+                    <li class="filter-item"><button type="button" class="button secondary">Веб-сайты</button></li>
+                    <li class="filter-item"><button type="button" class="button secondary">Приложения</button></li>
+                    <li class="filter-item"><button type="button" class="button secondary">Дизайн</button></li>
+                    <li class="filter-item"><button type="button" class="button secondary">Маркетинг</button></li>
                 </ul>
+            <!-- </div> -->
 
                 <!-- собственно примеры работ -->
-                <ul>
-                    <li> 
+            <!-- <div class="container">     -->
+                <ul class="galary-list">
+                    <li class="card"> 
                         <a href="" class="galary-link">
                             <img src="./img/img21.jpg" alt="фото веб-сайта" width="370">
-                            <h2 class="galary-title">Технокряк</h2>
-                            <p class="galary-text">Веб-сайт</p> 
+                            <div class="card-content">
+                                <h2 class="galary-title">Технокряк</h2>
+                                <p class="galary-text">Веб-сайт</p> 
+                            </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="card">
                         <a href="" class="galary-link">
                             <img src="./img/img22.jpg" alt="фото дизайна" width="370">
-                            <h2 class="galary-title">Постер New Orlean vs Golden Star</h2>
-                            <p class="galary-text">Дизайн</p>
-                        </a>
+                            <div class="card-content">
+                                <h2 class="galary-title">Постер New Orlean vs Golden Star</h2>
+                                <p class="galary-text">Дизайн</p>
+                            </div>
+                            </a>
                     </li>
-                    <li>
+                    <li class="card">
                         <a href="" class="galary-link">
                             <img src="./img/img23.jpg" alt="фото логотипа ресторана" width="370">
-                            <h2 class="galary-title">Ресторан Seafood</h2>
-                            <p class="galary-text">Приложение</p>
+                            <div class="card-content">
+                                <h2 class="galary-title">Ресторан Seafood</h2>
+                                <p class="galary-text">Приложение</p>
+                            </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="card">
                         <a href="" class="galary-link">
                             <img src="./img/img24.jpg" alt="фото наушники" width="370">
-                            <h2 class="galary-title">Проект Prime</h2>
-                            <p class="galary-text">Маркетинг</p>
+                            <div class="card-content">
+                                <h2 class="galary-title">Проект Prime</h2>
+                                <p class="galary-text">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="card">
                         <a href="" class="galary-link">
                             <img src="./img/img25.jpg" alt="фото коробки" width="370">
-                            <h2 class="galary-title">Проект Boxes</h2>
-                            <p class="galary-text">Приложение</p>
+                            <div class="card-content">
+                                <h2 class="galary-title">Проект Boxes</h2>
+                                <p class="galary-text">Приложение</p>
+                            </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="card">
                         <a href="" class="galary-link">
                             <img src="./img/img26.jpg" alt="фото веб-сайта" width="370">
-                            <h2 class="galary-title">Inspiration has no Borders</h2>
-                            <p class="galary-text">Веб-сайт</p>
+                            <div class="card-content">
+                                <h2 class="galary-title">Inspiration has no Borders</h2>
+                                <p class="galary-text">Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="card">
                         <a href="" class="galary-link">
                             <img src="./img/img27.jpg" alt="фото журнала" width="370">
-                            <h2 class="galary-title">Издание Limited Edition</h2>
-                            <p class="galary-text">Дизайн</p>
+                            <div class="card-content">
+                                <h2 class="galary-title">Издание Limited Edition</h2>
+                                <p class="galary-text">Дизайн</p>
+                            </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="card">
                         <a href="" class="galary-link">
                             <img src="./img/img28.jpg" alt="фото бирки" width="370">
-                            <h2 class="galary-title">Проект LAB</h2>
-                            <p class="galary-text">Маркетинг</p>
+                            <div class="card-content">
+                                <h2 class="galary-title">Проект LAB</h2>
+                                <p class="galary-text">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
-                    <li>
+                    <li class="card">
                         <a href="" class="galary-link">
                             <img src="./img/img29.jpg" alt="фото ноутбука" width="370">
-                            <h2 class="galary-title">Growing Business</h2>
-                            <p class="galary-text">Приложение</p>
+                            <div class="card-content">
+                                <h2 class="galary-title">Growing Business</h2>
+                                <p class="galary-text">Приложение</p>
+                            </div>
                         </a>
                     </li>
                 </ul>
@@ -114,12 +134,14 @@
     </main>
 
     <footer class="footer">
-        <a href="./index.html" class="logo"><span class="main-logo">Web</span>Studio</a>
-        <address>
-            <p class="street">г. Киев, пр-т Леси Украинки, 26 </p>
-            <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
-            <a href="tel:+380961111111" class="tel">+38 096 111 11 11</a>            
-        </address>
+        <div class="container">
+            <a href="./index.html" class="logo"><span class="main-logo">Web</span>Studio</a>
+            <address>
+                <p class="street">г. Киев, пр-т Леси Украинки, 26 </p> 
+                <a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a>
+                <a href="tel:+380961111111" class="tel">+38 096 111 11 11</a>            
+            </address>
+        </div>
     </footer>
 </body>
 </html>
